# towerwatch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cd.sh  ci.sh  config.h  deploy.sh  metrics_push.h  network_test.cpp  network_test.h  pyproject.toml  pytest.ini  storage.h  towerwatch.ino
.github/workflows/: ci.yml  sync-dashboards.yml
arduino/: connection_state.cpp  connection_state.h  metrics_push.cpp  storage.cpp  towerwatch.ino
docs/: architecture.md  bench-tests.md  code-health.md  dashboard-sync.md  design.md  field-playbook-standstill.md  m6-band-research.md  manual-speedtest.md  metrics-inventory.md  phone-compare.md  phone-rf-logger.md  plan-band-comparison.md  probe-m6.md  runbook.md  setup-pi.md  troubleshooter-response.md  whats-new-2026-06.md
docs/speedtest-tool/: run-speedtest.bat
docs/superpowers/plans/: 2026-04-23-build-info-telemetry.md
docs/superpowers/specs/: 2026-04-23-build-info-telemetry-design.md
grafana/: dashboard-compare.json  dashboard.json
pi/: clock.py  config.py  credentials.py.example  events.py  grafana.py  install.sh  lifecycle.py  loki.py  requirements.txt  scheduling.py  secrets.py.example  startup.py  tick.py  towerwatch.py  towerwatch.service
pi/bench/: README.md  loader.py  m6_probe_dump.py  preflight.py  run.py
pi/bench/harness/: inject.py  logger.py  mountinfo.py  observe.py  paths.py  report.py  service.py  snapshot.py  state.py
pi/bench/tests/: base.py  test_buffer_cap_and_corrupt.py  test_clock_skew_backward.py  test_clock_skew_forward.py  test_config_drift.py  test_dns_only_outage.py  test_full_network_loss.py  test_latency_injection.py  test_loki_429.py  test_partial_network.py  test_probe_targets_down.py  test_prom_5xx.py  test_readonly_data_partition.py  test_reboot_survival.py  test_service_lifecycle.py
pi/probes/: base.py  dns.py  gateway.py  http.py  m6.py  ookla.py  ping.py  tcp.py
pi/tests/: conftest.py  test_config_import.py  test_events.py  test_grafana_client.py  test_influx_line_format.py  test_lifecycle.py  test_loki_client.py  test_loki_flush_regression.py  test_loki_payload.py  test_main_narrative.py  test_no_stdlib_shadow.py  test_outage_classifier.py  test_partition_guard.py  test_probe_contract.py  test_probes_dns.py  test_probes_gateway.py  test_probes_http.py  test_probes_m6.py  test_probes_ookla.py  test_probes_ping.py  test_probes_tcp.py  test_schedule.py  test_startup_reconcile.py  test_tick_connection_state.py  test_tick_push_batch.py
pi/tests/fixtures/: m6_model.json  m6_wwan.json  ookla_bad_returncode.json  ookla_ok.json  ping_windows_ok.txt
pi/tests/stubs/: credentials.py  secrets.py
scripts/: deploy.sh  install-pi.sh  partition-pi-data.sh  phone_compare.py  sync_dashboards.py  towerwatch.service  twq.sh  update_dashboard.py
src/towerwatch/: __init__.py  __main__.py  app.py  config.py  credentials.py.example  events.py  lifecycle.py  main.py  net.py  scheduling.py  speedtest_cli.py  startup.py  tick.py
src/towerwatch/clients/: __init__.py  (+2 more)
tests/: conftest.py  fakes.py  test_config_gateway.py  test_config_import.py  test_config_overrides.py  test_events.py  test_grafana_client.py  test_influx_line_format.py  test_lifecycle.py  test_loki_client.py  test_loki_flush_regression.py  test_loki_payload.py  test_main_narrative.py  test_net.py  test_no_stdlib_shadow.py  test_outage_classifier.py  test_partition_guard.py  test_probe_contract.py  test_probes_bufferbloat.py  test_probes_cloudflare.py  test_probes_dns.py  test_probes_gateway.py  test_probes_http.py  test_probes_m6.py  test_probes_ookla.py  test_probes_ping.py  test_probes_tcp.py  test_schedule.py  test_speedtest_cli.py  test_startup_reconcile.py  test_tick_connection_state.py  test_tick_push_batch.py
tests/fixtures/: m6_model_standstill.json  ping_linux_loss.txt  ping_linux_ok.txt  ping_windows_subms.txt
(+10 files in other folders)
