[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "towerwatch"
version = "0.1.0"
description = "Cellular/broadband network quality monitor for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Towerwatch contributors" }]
keywords = ["monitoring", "network", "raspberry-pi", "cellular", "prometheus", "grafana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "requests>=2.31",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.370",
    "pre-commit>=3.7",
]

[project.scripts]
towerwatch = "towerwatch.main:main"

[project.urls]
Homepage = "https://github.com/kemosabe102/towerwatch"
Documentation = "https://github.com/kemosabe102/towerwatch#readme"

# ---------------------------------------------------------------------------
# Hatch build configuration — ship the src/ layout and type-marker
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/towerwatch"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Ruff — lint + format, single tool
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".worktrees", "pi/bench", "pi/speedtest_bin"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length — formatter handles
    "B008",   # function call in argument defaults (used deliberately for injectable factories)
    "SIM105", # suggest contextlib.suppress — fire-and-forget try/except/pass is clearer here
    "SIM117", # nested with — too aggressive in test setup
    "TC001",  # move application imports into TYPE_CHECKING — not worth the complexity at this size
    "UP042",  # StrEnum suggestion — str+Enum is intentional for Python 3.11 compat signalling
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",    # asserts expected in tests
    "RUF059",  # `with X as _:` style is a test smell we tolerate
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright — standard mode, pragmatic
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = [".worktrees", "pi/bench", "pi/speedtest_bin", "**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pi/bench", ".worktrees"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
